# crt_simulation

./: .gitignore  CMakeLists.txt  README.md
src/: beam.cpp  beam.h  beam_shader.h  common.h  fullscreen_color_shader.h  fullscreen_tex_shader.h  game.cpp  game.h  main.cpp  patches.cpp  patches.h  rect_shader.h  renderer.cpp  renderer.h
